# short-link-service

./: .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py
tests/: test_api.py
url_shortener.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
